--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -4,5 +4,7 @@
 calc-message: "&6Calculating &5<dimension> &6portal location for the coordinates:"
 result-message: "&6Place the portal in the &5<dimension>&6 on the coordinates:"
 wrong-dimension-error: "&cYou cannot create nether portals in this world!"
+no-permission-error: "&cYou do not have permission to run this command!"
+run-from-console-error: "&cYou cannot run this command in the console!"
 # Set to 0-9 or a-f to set the color for the coordinates. Leaving it as blank will set it to white.
 coord-color: "6"
