--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,18 +1,16 @@
 # MCPueblo PortalCalc Configuration
 
 # calculate = divide if the coordinate is in the overworld, multiply if in the nether.
-# Default is 8 as vanilla portals have a ratio of 1:8, but could be changed by other plugins/mods.
+# Default is 8 as vanilla portals have a ratio of 1:8, and shouldn't be changed unless you have a plugin/mod that is capable of changing this ratio.
 # Must be a single digit, otherwise it will round to the nearest integer.
 calculate-coord-by: 8
 
-# Use <dimension> as placeholder for the dimension the portal location is to be calculated.
+# Use <dimension> as placeholder on the first two messages for the dimension the portal location is to be calculated to.
 # You can utilize color codes with the & prefix.
 calc-message: "&6Calculating &5<dimension> &6portal location for the coordinates:"
-result-message: "&6Place the portal in the &5<dimension>&6 on the coordinates:"
+result-message: "&6Place the portal on the coordinates:"
 wrong-dimension-error: "&cYou cannot create nether portals in this world!"
 no-permission-error: "&cYou do not have permission to run this command!"
-run-from-console-error: "&cYou cannot run this command in the console!"
-wrong-arg-error: "&c/portalcalc <dimension> <x> <y> <z>\nValues for <dimension>: overworld/world, nether"
 
 # Set to 0-9 or a-f to set the color for the coordinates. Leaving it as blank will set it to white.
 coord-color: "6"
