--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,16 +1,16 @@
 # MCPueblo PortalCalc Configuration
 
 # calculate = divide if the coordinate is in the overworld, multiply if in the nether.
-# Default is 8 as vanilla portals have a ratio of 1:8, and shouldn't be changed unless you have a plugin/mod that is capable of changing this ratio.
+# Default is 8 as vanilla portals have a ratio of 1:8,
+# and shouldn't be changed unless you have a plugin/mod that is capable of changing this ratio.
 # Must be a single digit, otherwise it will round to the nearest integer.
 calculate-coord-by: 8
 
 # Use <dimension> as placeholder on the first two messages for the dimension the portal location is to be calculated to.
-# You can utilize color codes with the & prefix.
+# MineDown formatting is utilized for messages https://github.com/Phoenix616/MineDown
 calc-message: "&6Calculating &5<dimension> &6portal location for the coordinates:"
 result-message: "&6Place the portal on the coordinates:"
 wrong-dimension-error: "&cYou cannot create nether portals in this world!"
 no-permission-error: "&cYou do not have permission to run this command!"
-
-# Set to 0-9 or a-f to set the color for the coordinates. Leaving it as blank will set it to white.
-coord-color: "6"
+reload-message: "&6Configuration and messages have been reloaded."
+coord-display: "&6X: <x> Y: <y> Z: <z>"
